[package]
name = "m6000m-rs"
version = "0.1.1-beta.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serialport = "4"
tokio = { version = "1", features = ["full"] }
#es51986 = { path = "../es51986" }
es51986 = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-jsonlines = "0"
reqwest = { version = "0", default-features = false, features = ["blocking", "rustls-tls"] }
env_logger = "0"
log = "0"
bytes = "1"
rodio = "0"
cpal = "0.15.3"
